fix: contrast ratio fixed and box shadow

--- a/alert/alert.css
+++ b/alert/alert.css
@@ -4,23 +4,23 @@
     /* border: 1px solid red; */
     display: flex;
     align-items: center;
-    width: 30.5rem;
+    width: 32.5rem;
     padding: 1rem;
     gap:1rem;
-    box-shadow:10px 10px 15px rgba(0, 0, 0, 0.253);
+    box-shadow:5px 5px 6px rgba(0, 0, 0, 0.253);
     border-radius: 0.4rem;
 }
 
 /* red error alert */
 .red-error-alert{
     background-color: rgba(255, 148, 148, 0.918);
-    color: rgba(255, 8, 8, 0.89);
+    color: rgba(131, 0, 0, 0.89);
     font-weight: 600;
 }
 
 /*  yellow warning alert */
 .yellow-warning-alert{
-    background-color: rgb(255, 235, 84);
+    background-color: rgb(255, 239, 114);
     color: rgba(49, 49, 30, 0.89);
     font-weight: 600;
 }
@@ -28,13 +28,13 @@
 /* blue information alert */
 .blue-info-alert{
     background-color: rgb(173, 228, 255);
-    color: rgba(1, 45, 126, 0.65);
+    color: rgba(0, 26, 73, 0.65);
     font-weight: 600;
 }
 
 /* green success alert */
 .green-success-alert{
     background-color: rgb(189, 255, 163);
-    color: rgba(2, 148, 22, 0.65);
+    color: rgba(1, 31, 5, 0.65);
     font-weight: 600;
 }
